--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,9 @@
     
 version: 1.0.{build}
 image: Visual Studio 2017
-configuration:
-- Release
+configuration: Release
+platform: x64  
+  
 before_build:
   - ps: $Env:PLATFORM_TOOLSET="v141"
 after_build:
