--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,15 @@
     
 version: 1.0.{build}
 image: Visual Studio 2017
-configuration: Release
-platform: x64  
+
+configuration:
+- Release
+
+platform:
+- x64
+
+build:
+  project: AsterixRecorder
   
 before_build:
   - ps: $Env:PLATFORM_TOOLSET="v142"
