--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,25 @@ image: Visual Studio 2017
 configuration:
 - Release
 
-platform: 
-- x64
 
-qtdir: C:\Qt\5.13.0\msvc2017_64
+environment:
+  PROJECT_NAME: chrome-password-reader
+  matrix:
+  - id: msvc-x86
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    platform: x86
+    compiler: msvc-15
+    generator: "Visual Studio 15 2017"
+    QTDIR: "C:\\Qt\\5.13.0\\msvc2015"
+  - id: msvc-x64
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    platform: x64
+    compiler: msvc-15
+    generator: "Visual Studio 15 2017 Win64"
+    QTDIR: "C:\\Qt\\5.13.0\\msvc2017_64"
+
+
+
 
 build:
   project: AsterixRecorder.vcxproj
