--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,39 +1,79 @@
-    
-version: 1.0.{build}
-image: Visual Studio 2017
+# GENERAL CONFIGURATION #
+#version format
+version: '1.0.{build}'
 
-configuration:
-- Release
+#branches to build
+branches:
+  only:
+    - master
 
+#don't build on tags
+skip_tags: true
+
+# ENVIRONMENT CONFIGURATION #
+
+clone_folder: c:\%PROJECT_NAME%
+
+shallow_clone: true
+
+clone_depth: 5   
 
 environment:
-  PROJECT_NAME: chrome-password-reader
+  PROJECT_NAME: AsterixRecorder
   matrix:
   - id: msvc-x86
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     platform: x86
     compiler: msvc-15
     generator: "Visual Studio 15 2017"
-    QTDIR: "C:\\Qt\\5.13.0\\msvc2017"
+    QTDIR: "C:\\Qt\\5.11.1\\msvc2015"
   - id: msvc-x64
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     platform: x64
     compiler: msvc-15
     generator: "Visual Studio 15 2017 Win64"
-    QTDIR: "C:\\Qt\\5.13.0\\msvc2017_64"
+    QTDIR: "C:\\Qt\\5.11.1\\msvc2017_64"
 
+configuration:
+  - Release
 
-
-
-build:
-  project: AsterixRecorder.vcxproj
+install:
+  - set PATH=%QTDIR%\bin;%PATH%
+  - set ORIGPATH=%PATH%
   
+#the build fail once the job fails
+matrix:
+  fast_finish: true
+
+# BUILD CONFIGURATION #
 before_build:
-  - ps: $Env:PLATFORM_TOOLSET="v141"
-  
-after_build:
-  - 7z a AsterixRecorder.zip %APPVEYOR_BUILD_FOLDER%\Release\*.* "C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x86\ucrtbase.dll"
+    - cd c:\%PROJECT_NAME%
+    - md build
 
-artifacts:  # Archive the generated packages in the ci.appveyor.com build report.  - path: bin\Release\*
-  - path: AsterixRecorder.zip
-    name: artifacts-all
+build_script:
+  - cd build
+  - cmake .. -G "%generator%"
+  - cmake --build . --config "%configuration%"
+
+after_build:
+  - cd C:\%PROJECT_NAME%\build\%configuration%\
+  - windeployqt.exe --no-opengl-sw --no-translations --no-system-d3d-compiler -no-angle ./AsterixRecorder.exe 
+  - 7z a %PROJECT_NAME%-win-%platform%.zip ./*
+  - move %PROJECT_NAME%-win-%platform%.zip C:\%PROJECT_NAME%\%PROJECT_NAME%-win-%platform%.zip
+
+# TEST CONFIGURATION #
+test: off
+
+# ARTIFACTS AND DEPLOYMENT CONFIGURATION #
+artifacts:
+  - path: '%PROJECT_NAME%-win-%platform%.zip'
+    name: artifacts
+    
+# deploy:
+#   release: v$(appveyor_build_version)
+#   description: Chrome password export tool for Windows
+#   tag: v$(appveyor_build_version)
+#   provider: GitHub
+#   auth_token:
+#     secure: PTmCCvHOYwSne/qGWheaYLb15X89BkUzh/hi8Zem+P3oGsLn6pAMuY21IbpYk83I
+#  artifact: '%PROJECT_NAME%-win-%platform%.zip'
