--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,11 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
 # Find the Qt libraries
-# find_package(Qt5Core CONFIG REQUIRED)
-# find_package(Qt5Network CONFIG REQUIRED)
+find_package(Qt5Core CONFIG REQUIRED)
+find_package(Qt5Gui CONFIG REQUIRED)
+find_package(Qt5Network CONFIG REQUIRED)
 
-find_package(Qt5 COMPONENTS Core Widgets Network CONFIG REQUIRED)
+# find_package(Qt5 COMPONENTS Core Widgets Network CONFIG REQUIRED)
 
 set(SRCS main.cpp
          AsterixRecorder.cpp
